Changes for 3.0.0:

* Fixed issue #1: Automatic value clamping is confusing and irrelevant for most use cases.
* Fixed issue #4: New include file which defines all Variant internal types.
* Fixed issue #5: Reorder and clarify VariantUnion fields.

Changes for 2.2.0:

* New Feature: Changed minimum compilor requirement from C++98 to C++11.
* New Feature: Renamed main include file to `variant.h`.
* Fixed issue #2: Limit Variant class overloaded operators to stdint.h types.

Changes for 2.1.0:

* New Feature: Implemented CMake support.
* New Feature: Implemented Linux support (limited).

Changes for 2.0.114: (05/26/2017)

* New Feature: Updated API for cleaner look & updated documentation.
* New Feature: Added speed optimizations.
* New Feature: Added more operators: +, -, *, /, +=, -=, *=, /=, <, >, <=, >=, == and !=
* New Feature: Implemented division by zero handling.

Changes for 1.0.6: (10/29/2016)

* First public release.
* Originally released on https://www.end2endzone.com/libvariant-a-c-library-which-encapsulate-any-value-of-variant-types/