@@ -1,4 +1,9 @@
-#pragma once
+
+
+#ifndef LIBVARIANT_CODEGENERATOR_H
+#define LIBVARIANT_CODEGENERATOR_H
 
 void generateDeclarations();
 void generateDefinitions();
+
+#endif //LIBVARIANT_CODEGENERATOR_H
