@@ -1,4 +1,7 @@
-#pragma once
+
+
+#ifndef LIBVARIANT_VARIANTDEFINITION_H
+#define LIBVARIANT_VARIANTDEFINITION_H
 
 #include <string>
 #include <vector>
@@ -18,3 +21,5 @@ std::string getVariantTypedefFromType(const std::string & iBaseType);
 size_t getNumInnerTypes();
 const INNER_TYPE & getInnerType(size_t iIndex);
 std::string getTypedefNameFromBaseType(const BASE_TYPE & iBaseType);
+
+#endif //LIBVARIANT_VARIANTDEFINITION_H
